<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutId"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="italic"
                android:text="@string/enter_item" />

            <EditText
                android:id="@+id/groceryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_quantity"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryQty"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:text="@string/save_title" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>